--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 5000
 NODE_ENV = development
 MONGO_URI = mongodb+srv://canyon:canyon@ibtesumaninda.nh9ukxs.mongodb.net/proshop?retryWrites=true&w=majority
+JWT_SECRET = abc123
