--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ PORT = 5000
 NODE_ENV = development
 MONGO_URI = mongodb+srv://canyon:canyon@ibtesumaninda.nh9ukxs.mongodb.net/proshop?retryWrites=true&w=majority
 JWT_SECRET = abc123
+ROOT_URL = http://localhost:5000
+CLIENT_URL = http://localhost:5173/
+STORE_ID = test1645deb34d2a09
+STORE_PASSWORD = test1645deb34d2a09@ssl
