--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "sslcommerz-lts": "^1.1.0"
+    "sslcommerz-lts": "^1.1.0",
+    "stripe": "^12.8.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
